# polymarket

./: .env.example  .gitignore  README.md  polybot.logrotate  polybot.service  pyproject.toml
github/workflows/.github/workflows/: stress-test.yml
polybot/: config.py  main.py  pyproject.toml
polybot/display/: banner.py  cards.py  progress.py  test_display.py
polybot/notifier/: formatter.py  telegram.py
polybot/scanner/: batcher.py  fetcher.py  filter.py  pipeline.py  scorer.py
polybot/scheduler/: loop.py
polybot/sources/: base.py  cdc.py  resolver.py  tsa.py  wunderground.py
polybot/src/polybot/: __init__.py
tests/: test_fetcher.py  test_filter.py  test_formatter.py  test_scorer.py  test_sources.py
